[tool.poetry]
name = "zepyros"
version = "0.1.3"
description = "ZErnike Polynomials analYsis of pROtein Shapes. A tool for image characterizarion"
authors = ["Mattia Miotto"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.24"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scipy = ">=1.9.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.2"
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
